--- a/SnakeApp.csproj
+++ b/SnakeApp.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Assets\SnakeAssets\Body.png" />
-    <None Remove="Assets\SnakeAssets\DeadBody.png" />
-    <None Remove="Assets\SnakeAssets\DeadHead.png" />
-    <None Remove="Assets\SnakeAssets\DroidSansMono.ttf" />
-    <None Remove="Assets\SnakeAssets\Empty.png" />
-    <None Remove="Assets\SnakeAssets\Food.png" />
-    <None Remove="Assets\SnakeAssets\Head.png" />
-    <None Remove="Assets\SnakeAssets\icon.ico" />
+    <None Remove="Assets\Body.png" />
+    <None Remove="Assets\DeadBody.png" />
+    <None Remove="Assets\DeadHead.png" />
+    <None Remove="Assets\DroidSansMono.ttf" />
+    <None Remove="Assets\Empty.png" />
+    <None Remove="Assets\Food.png" />
+    <None Remove="Assets\Head.png" />
+    <None Remove="Assets\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,14 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Assets\SnakeAssets\Body.png" />
-    <Resource Include="Assets\SnakeAssets\DeadBody.png" />
-    <Resource Include="Assets\SnakeAssets\DeadHead.png" />
-    <Resource Include="Assets\SnakeAssets\DroidSansMono.ttf" />
-    <Resource Include="Assets\SnakeAssets\Empty.png" />
-    <Resource Include="Assets\SnakeAssets\Food.png" />
-    <Resource Include="Assets\SnakeAssets\Head.png" />
-    <Resource Include="Assets\SnakeAssets\icon.ico" />
+    <Resource Include="Assets\Body.png" />
+    <Resource Include="Assets\DeadBody.png" />
+    <Resource Include="Assets\DeadHead.png" />
+    <Resource Include="Assets\DroidSansMono.ttf" />
+    <Resource Include="Assets\Empty.png" />
+    <Resource Include="Assets\Food.png" />
+    <Resource Include="Assets\Head.png" />
+    <Resource Include="Assets\icon.ico" />
   </ItemGroup>
 
 </Project>
